--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -3,7 +3,8 @@
   bottom: 0;
   width: 100%;
   background-color: #f9f9fa;
-  padding: 20px 50px;
+  padding: 20px 50px;  
+  /* i dont want to encrease the size of the box (ex)padding) */
   box-sizing: border-box;
   border-top: 1px solid rgba(121, 121, 121, 0.3);
 }
@@ -16,4 +17,33 @@
 .nav__link {
   position: relative;
   color: #2e363e;
+  position: relative;
+}
+
+.nav__notification {
+  background-color: tomato;
+  width: 30px;
+  height: 30px;
+  /* square -> circle - half of the square width */
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: 600;
+  /* absolute는 가장 가까운 relative를 가진 부모를 기준으로 움직인다 */
+  position: absolute;
+  left: 15px;
+  bottom: 15px;
+}
+
+.nav__new {
+  color: tomato;
+  position: absolute;
+  display: flex;
+  width: 20px;
+  height: 20px;
+  left: 30px;
+  bottom: 20px;
+  font-weight: 900;
 }
