--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,7 +1,8 @@
 .status-bar {
-  display: flex;
+  display: flex;  
   justify-content: center;
-  padding: 5px 3px;
+  align-items: center;
+  padding: 5px 3px;  
 }
 
 .status-bar__column {
