--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -14,3 +14,16 @@
 .screen-header__icons span {
   margin-left: var(--horizontal-space);
 }
+
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+  
+}
+.screen-header .fa-cog:hover {
+  animation: rotateCog 1s linear infinite;
+}
