--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -123,7 +123,7 @@
   padding: 5px 25px;
   align-items: center;
   box-sizing: border-box;
-  transition: all 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
 }
 
 .reply i {
@@ -146,7 +146,6 @@
   border-radius: 25px;
   box-sizing: border-box;
   transition: all 0.3s ease-in-out;
-
 }
 
 .reply__column:last-child > i, 
@@ -190,7 +189,7 @@
   opacity: 0;
 }
 
-.reply:focus-within input {
+.reply input:focus {
   width: 98vw;
   transform: translateX(-13%) translateY(-80px);
 }
