--- a/css/components/animation.css
+++ b/css/components/animation.css
@@ -9,7 +9,7 @@
 }
 
 #splash-screen {
-  background-color: var(--yellow);
+  background-color: var(--background-color);
   position: absolute;
   height: 100vh;
   width: 100vw;
@@ -18,7 +18,7 @@
   justify-content: center;
   align-items: center;
   font-size: 132px;
-  animation: hideSplashScreen 1s ease-in-out forwards;
+  animation: hideSplashScreen 2s ease-in-out forwards;
 }
 
 @keyframes slidein {
@@ -32,7 +32,21 @@
   }
 }
 
-header, main,
+header:not(.welcome-header), main,
 #friends-display-link {
   animation: slidein 1s linear;
+}
+
+@keyframes goAndBack {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(360deg);
+  }
+}
+
+.icon-row__icon i:hover {
+  will-change: transform;
+  animation: goAndBack 1s linear infinite;
 }
