--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -2,7 +2,9 @@
   display: flex;  
   justify-content: center;
   align-items: center;
-  padding: 5px 3px;  
+  padding: 5px 3px;
+  background: var(--status-bar-color);
+  color: var(--icon-color);
 }
 
 .status-bar__column {
