--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,6 +1,6 @@
 #chat-screen {
   background-color: #abc1d1;
-  height: 500vh;
+  /* height: 100vh; */
 }
 
 #chat-screen .alt-header,
@@ -8,7 +8,7 @@
   top: 0;
   position: fixed;
   width: 100%;
-  background-color: #abc1d1;
+  background-color: rgba(171, 193, 209, 0.3);
   box-sizing: border-box;
 }
 
@@ -34,7 +34,7 @@
 }
 
 .main-chat {
-  margin-top: 180px;
+  margin-top: 160px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -93,7 +93,7 @@
 }
 
 .message-row--own .message__bubble {
-  background-color: var(--yellow);
+  background-color: var(--background-color);
   border-top-right-radius: 0px;
   border-top-left-radius: 15px;
   margin-right: 0px;
@@ -117,7 +117,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  background-color: white;
+  background: var(--status-bar-color);
   display: flex;
   justify-content: space-between;
   padding: 5px 25px;
@@ -127,7 +127,8 @@
 }
 
 .reply i {
-  opacity: 0.5;
+  color: black;
+  opacity: 0.7;
 }
 
 .reply .reply__column:first-child {
@@ -161,7 +162,7 @@
 }
 
 .reply__column button {
-  background-color: var(--yellow);
+  background-color: var(--background-color);
   border: none;
   width: 30px;
   height: 30px;
