--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,7 @@ body {
   color: #2e363e;
   font-family: 'Open Sans', sans-serif;
   height: 100vh;
+  background: var(--main-background-color);
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
 }
 
